--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -5,8 +5,6 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,  log4net" />
 		<sectionGroup name="mailSettings">
 			<section name="default" type="System.Net.Configuration.SmtpSection" />
-			<section name="user4" type="System.Net.Configuration.SmtpSection" />
-			<section name="user11" type="System.Net.Configuration.SmtpSection" />
 		</sectionGroup>
 	</configSections>
 
@@ -45,15 +43,9 @@
 	</connectionStrings>
 
 	<mailSettings>
-		<default deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
-			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\mails\alicargo.tracker-default" />
+		<default deliveryMethod="SpecifiedPickupDirectory" from="alicargo.clone@gmail.com">
+			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\mails\alicargo.clone-default" />
 		</default>
-		<user4 deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
-			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\mails\alicargo.tracker-avion" />
-		</user4>
-		<user11 deliveryMethod="SpecifiedPickupDirectory" from="robot@alicargo.ru">
-			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\mails\alicargo.tracker-alicargo" />
-		</user11>
 	</mailSettings>
 
 	<system.web>
