definded email configuration

--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -3,18 +3,18 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 
 	<appSettings>
-		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="DefaultFrom" value="alicargo.clone@gmail.com" />
+		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="DefaultFrom" value="Robot@cargo-trans.li" />
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="SupportEmail" value="alicargo.clone@gmail.com" />
-		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="FeedbackEmail" value="alicargo.clone@gmail.com" />
+		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="FeedbackEmail" value="info@cargo-trans.li" />
 
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="JobPausePeriod" value="00:00:30" />
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="CourseSourceAttempts" value="5" />
 	</appSettings>
 
 	<mailSettings xdt:Transform="Replace">
-		<default deliveryMethod="Network" from="alicargo.clone@gmail.com">
-			<network host="smtp.gmail.com" enableSsl="true" userName="alicargo.clone@gmail.com" password="ljhRTZ1foBcZt3e"
-			         port="587" />
+		<default deliveryMethod="Network" from="Robot@cargo-trans.li">
+			<network host="exchange.cargo-trans.li" enableSsl="false" userName="Cargo\robot" password="1VkXM4lY"
+			         port="2525" />
 		</default>
 	</mailSettings>
 
