--- a/Alicargo.Deploy/Alicargo.Deploy.csproj
+++ b/Alicargo.Deploy/Alicargo.Deploy.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Content Include="Tasks\Backup DB.xml" />
     <Content Include="Databases\Alicargo-3_0-3_1.sql" />
     <Content Include="Databases\Alicargo-2_8-3_0.sql" />
     <Content Include="Databases\Alicargo-0_0-2_8.sql" />
@@ -56,6 +57,7 @@
     <Content Include="Databases\Alicargo-3_1-3_2.sql" />
     <Content Include="Databases\Alicargo_Files-0_0-2_8.sql" />
     <Content Include="Databases\Clean-db.sql" />
+    <Content Include="Tasks\resend-failed-emails.xml" />
     <Content Include="restore-alicargo_release-3_1.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
