--- a/Alicargo.Core.Tests/Alicargo.Core.Tests.csproj
+++ b/Alicargo.Core.Tests/Alicargo.Core.Tests.csproj
@@ -84,6 +84,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Calculation\CalculationHelperTests.cs" />
     <Compile Include="Helpers\LocalizationHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
