fixed db update script

--- a/Alicargo.Deploy/Alicargo.Deploy.csproj
+++ b/Alicargo.Deploy/Alicargo.Deploy.csproj
@@ -46,6 +46,7 @@
     <Content Include="Databases\Alicargo-3_1-3_2.sql" />
     <Content Include="Databases\Alicargo-3_4-3_5.sql" />
     <Content Include="Databases\Alicargo-3_3-3_4.sql" />
+    <Content Include="Databases\Alicargo-3_5-3_6.sql" />
     <Content Include="Databases\Alicargo_Files-0_0-2_8.sql" />
     <Content Include="restore-alicargo_release-3_1.sql" />
   </ItemGroup>
