--- a/Alicargo.Deploy/Alicargo.Deploy.csproj
+++ b/Alicargo.Deploy/Alicargo.Deploy.csproj
@@ -47,6 +47,7 @@
     <Content Include="Databases\Alicargo-3_4-3_5.sql" />
     <Content Include="Databases\Alicargo-3_3-3_4.sql" />
     <Content Include="Databases\Alicargo-3_5-3_6.sql" />
+    <Content Include="Databases\Alicargo-3_6-3_7.sql" />
     <Content Include="Databases\Alicargo_Files-0_0-2_8.sql" />
     <Content Include="restore-alicargo_release-3_1.sql" />
   </ItemGroup>
