--- a/Alicargo.Deploy/Alicargo.Deploy.csproj
+++ b/Alicargo.Deploy/Alicargo.Deploy.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="backup-db-alicargo-all.ps1" />
+    <None Include="delete-old-emails.ps1" />
     <None Include="resend-failed-emails.ps1" />
     <None Include="Scripts\backup-db.ps1" />
     <None Include="Scripts\delete-old-emails.ps1" />
