--- a/Alicargo.Deploy/Alicargo.Deploy.csproj
+++ b/Alicargo.Deploy/Alicargo.Deploy.csproj
@@ -53,6 +53,10 @@
     <Content Include="Databases\Alicargo-3_6-3_7.sql" />
     <Content Include="Databases\Alicargo_Files-0_0-2_8.sql" />
     <Content Include="restore-alicargo_release-3_1.sql" />
+    <Content Include="Tasks\Backup DB.xml" />
+    <Content Include="Tasks\db-maintain.xml" />
+    <Content Include="Tasks\delete-old-emails.xml" />
+    <Content Include="Tasks\resend-failed-emails.xml" />
     <None Include="Scripts\run-sql.ps1" />
     <Content Include="Scripts\db-maintain.sql" />
     <Content Include="Scripts\delete-old-emails.sql" />
