--- a/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
+++ b/Alicargo.DataAccess.Contracts/Alicargo.DataAccess.Contracts.csproj
@@ -173,12 +173,18 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Enums.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Resources\Enums.ru.resx" />
+    <EmbeddedResource Include="Resources\Enums.ru.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\EventType.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>EventType.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\EventType.ru.resx" />
+    <EmbeddedResource Include="Resources\ApplicationFileType.pl.resx" />
+    <EmbeddedResource Include="Resources\AwbFileType.pl.resx" />
+    <EmbeddedResource Include="Resources\Enums.pl.resx" />
+    <EmbeddedResource Include="Resources\EventType.pl.resx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Alicargo.Utilities\Alicargo.Utilities.csproj">
