--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -648,6 +648,7 @@
     <Content Include="Content\images\sprites.png" />
     <Content Include="index.html" />
     <Content Include="Scripts\app\pl.js" />
+    <Content Include="Scripts\jQuery\globalize\cultures\globalize.culture.pl.js" />
     <Content Include="Scripts\js\imagesloaded.js" />
     <Content Include="Scripts\js\isotope.min.js" />
     <Content Include="Scripts\js\jquery.js" />
@@ -728,6 +729,7 @@
     <Content Include="Scripts\jQuery\globalize\cultures\globalize.culture.ru.js" />
     <Content Include="Scripts\jQuery\globalize\globalize.js" />
     <Content Include="Scripts\kendo\2014.1.318\cultures\kendo.culture.en.min.js" />
+    <Content Include="Scripts\kendo\2014.1.318\cultures\kendo.culture.pl.min.js" />
     <Content Include="Scripts\kendo\2014.1.318\cultures\kendo.culture.it.min.js" />
     <Content Include="Scripts\kendo\2014.1.318\cultures\kendo.culture.ru.min.js" />
     <Content Include="Scripts\kendo\2014.1.318\kendo.web.min.js" />
