--- a/Alicargo.Core.BlackBox.Tests/app.config
+++ b/Alicargo.Core.BlackBox.Tests/app.config
@@ -9,15 +9,19 @@
 		</sectionGroup>
 	</configSections>
 	<connectionStrings>
-		<add name="Alicargo.Core.BlackBox.Tests.Properties.Settings.MainConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
-		<add name="Alicargo.Core.BlackBox.Tests.Properties.Settings.FilesConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
-	</connectionStrings>
+  <add name="Alicargo.Core.BlackBox.Tests.Properties.Settings.MainConnectionString"
+   connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
+  <add name="Alicargo.Core.BlackBox.Tests.Properties.Settings.FilesConnectionString"
+   connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
+ </connectionStrings>
 	<mailSettings>
 		<default deliveryMethod="Network" from="robot@avionrussia.com">
-			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef" port="587" />
+			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
+            port="587" />
 		</default>
 		<user4 deliveryMethod="Network" from="robot@avionrussia.com">
-			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef" port="587" />
+			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
+            port="587" />
 		</user4>
 		<user11 deliveryMethod="Network" from="robot@alicargo.ru">
 			<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
