--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -24,7 +24,7 @@
 		<add key="CargoReceivedDaysToShow" value="10" />
 		<add key="StateId-CargoOnTransit" value="12" />
 
-		<add key="DefaultFrom" value="robot@avionrussia.com" />
+		<add key="DefaultFrom" value="Robot@cargo-trans.li" />
 		<add key="SupportEmail" value="6alyamov@gmail.com" />
 		<add key="FeedbackEmail" value="msk@alicargo.ru" />
 
